# abitur-bot

./: .env.example  .gitignore  OPTIMIZATION.md  README.md  RUN_GUIDE.md  main.py  pyproject.toml  requirements.txt  run.sh
bot/: main.py
db/: redis_client.py
docs/: roadmap.md  run-local.md  vision-en.md  vision-ru.md  vision.md
llm/: llm_client.py
parser/: NSU_parser.py  config.py  main.py  nsu_parser.py  utils.py
parser/config/: config.yaml  load_config.py
parser/resources/: config.py  requirements.txt
parser/tests/: test_nsu_parser.py  test_utils.py
tests/: test_redis_client.py
tests/parser/: conftest.py  test_nsu_parser.py  test_utils.py
tests/parser/fixtures/html/: it.html
