[project]
name = "abitur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"ruff",
	"aiogram",
	"python-dotenv",
	"httpx",
	"langchain>=0.3.27",
	"langchain-community>=0.3.31",
	"langchain-openai>=0.3.35",
	"langchain-ollama>=0.3.10",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
